--- a/src/scss/globals/_layout.scss
+++ b/src/scss/globals/_layout.scss
@@ -22,9 +22,9 @@ section:not(.hero) {
   background-repeat: no-repeat;
   background-position: top;
   background-size: 100% 300px;
+  font-size: clamp(1.25rem, 2vw + 0.5rem, 1.3rem);
   @include u.subgrid(center);
   text-align: center;
-  font-size: clamp(1.25rem, 2vw + 0.5rem, 1.2rem);
   @include u.mq(medium) {
     background-size: 100% 200px;
     margin-bottom: 6rem;
@@ -32,6 +32,11 @@ section:not(.hero) {
   }
   > * {
     grid-column: 2 / -2;
+  }
+  p {
+    @include u.mq(medium) {
+      max-width: 700px;
+    }
   }
   &__logo {
     margin-block: 5rem 3rem;
@@ -44,9 +49,6 @@ section:not(.hero) {
       width: 100%;
       aspect-ratio: 1/1;
     }
-  }
-  p {
-    font-size: clamp(1.25rem, 2vw + 0.5rem, 1.5rem);
   }
 
   .page__buttons {
