--- a/src/scss/components/_buttons.scss
+++ b/src/scss/components/_buttons.scss
@@ -8,6 +8,7 @@
   gap: 1.5rem;
   height: fit-content;
   margin-block: 5rem;
+  font-size: clamp(1.2rem, 1vw + 0.5rem, 1.5rem);
   @include u.mq(medium) {
     margin-top: 3rem;
     gap: 2rem;
